Added functionelity to the button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p id="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
@@ -11,5 +12,6 @@
          Porro iure id inventore quod mollitia maxime nisi vero tenetur temporibus?
     </p>
     <button onclick="showHideContent()">show/hide</button>
+    <script src="scripts.js"></script>
 </body>
 </html>
